# padyar-live-avatar

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE.mobile  PRIVACYSTATEMENT.mobile.md  README.md  README.mobile.md  README_fa.md  README_zh.mobile.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
PadYar-LipSync-master/: README.md  Stream_Final_models.ipynb  index.html  realtime.yaml  realtime_inference.py  requirements.txt
PadYar-LipSync-master/avatar_codes/: synthesizer.py  test_vits_models.ipynb
PadYar-LipSync-master/final site/: index.html  script.js  style.css
PadYar-LipSync-master/site/: index.html  parallel.html
PadYar-LipSync-master/v15/: Stream_Final_models15.ipynb  realtime_inference.py
docs/: ARCHITECTURE.md  BOUNDARIES.md  ENGINE_ADAPTER_PROTOCOL_FA.md  ENGINE_INTEGRATION_PLAN_FA.md  ENGINE_INTEGRATION_RISKS_FA.md  KNOWLEDGE_BASED_READINESS_FA.md  MOCK_ENGINE_SERVICE_FA.md  REAL_ENGINE_BRIDGE_APPROVAL_PLAN_FA.md  REAL_ENGINE_BRIDGE_MAPPING_FA.md  REAL_ENGINE_BRIDGE_READINESS_FA.md  REMOTE_ENGINE_ADAPTER_MVP_FA.md  ROADMAP_FA.md  RUNTIME_ADAPTER_SELECTION_FA.md  RUNTIME_E2E_CONTRACT_HARNESS_FA.md  TECHNICAL_ARCHITECTURE_REPORT_FA.md
docs/ADR/: 0001-runtime-engine-separation.md
mobile/: README.md
scripts/: run_mock_engine.py
tests/: conftest.py  test_adapter_contract.py  test_adapter_factory.py  test_engine.py  test_governance_architecture.py  test_governance_deps.py  test_governance_imports.py  test_latency.py  test_mock_engine_service.py  test_remote_engine_adapter.py  test_rest.py  test_runtime_e2e_contract.py  test_scheduler.py  test_session.py  test_ws_integration.py
(+90 files in other folders)
